--- a/trading/dune
+++ b/trading/dune
@@ -1,3 +1,4 @@
-(library
- (name stock_bandit)
- (libraries zamburak))
+(executable
+ (name demo)
+ (libraries zamburak matplotlib)
+ (modules demo stockBandit))
